[package]
name = "twitter-followers"
version = "0.1.0"
authors = ["Arata Tanaka <2089153+ara-ta3@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "twitter-followers"
path = "main.rs"
