[package]
name = "twitter-followers"
version = "0.1.0"
authors = ["Arata Tanaka <2089153+ara-ta3@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egg-mode = "0.16"
envconfig = "0.5.0"
envconfig_derive = "0.5.0"

[[bin]]
name = "twitter-followers"
path = "src/main.rs"
